# eurorust-2022

./: .gitignore  LICENSE  README.md
nodejs/: package-lock.json  package.json
nodejs/src/: demo-serde-wasm.ts  demo-tsify-wasm.ts  parse-schema.ts  validate-ast.ts
nodejs/src/ideal-ast/: ideal-ast.d.ts  schema-parser-wasm-ast.d.ts
nodejs/src/utils/: displayError.ts  isWasmPanic.ts
nodejs/src/wasm/: demo_panic.js  demo_panic_bg.wasm  demo_serde_wasm.d.ts  demo_serde_wasm.js  demo_serde_wasm_bg.wasm  demo_serde_wasm_bg.wasm.d.ts  demo_tsify_wasm.d.ts  demo_tsify_wasm.js  demo_tsify_wasm_bg.wasm  demo_tsify_wasm_bg.wasm.d.ts  playground_wasm.d.ts  playground_wasm.js  playground_wasm_bg.wasm  playground_wasm_bg.wasm.d.ts  schema_parser_wasm.d.ts  schema_parser_wasm.js  schema_parser_wasm_bg.wasm  schema_parser_wasm_bg.wasm.d.ts
prisma/: schema.prisma
rust/: Cargo.toml
rust/demo-cli/: Cargo.toml
rust/demo-cli/src/: main.rs
rust/demo-panic/: Cargo.toml
rust/demo-panic/src/: lib.rs
rust/demo-serde-wasm/: Cargo.toml
rust/demo-serde-wasm/src/: ast.rs  lib.rs
rust/demo-tsify-wasm/: Cargo.toml
rust/demo-tsify-wasm/src/: ast.rs  lib.rs
rust/playground-wasm/: Cargo.toml
rust/playground-wasm/src/: enum_adt.rs  enum_c.rs  lib.rs  lifetime.rs  lifetime_workaround.rs  scalars.rs  string_basic.rs  string_getter_with_clone.rs  string_manual.rs  vec_struct.rs  vec_u32.rs
rust/schema-parser/: Cargo.toml
rust/schema-parser-wasm/: Cargo.toml
rust/schema-parser-wasm/src/: lib.rs
rust/schema-parser/src/: lib.rs  parseutil.rs
rust/schema-parser/src/ast/: datasource.rs  datasource_db.rs  mod.rs  schema.rs
rust/schema-parser/src/parse/: datasource.rs  datasource_db.rs  mod.rs  parser.rs
rust/schema-parser/src/parser/: mod.rs  schema.rs
rust/schema-parser/src/validate/: diagnostics.rs  mod.rs  validator.rs
rust/scripts/: wasm.sh  wasm_all.sh
