[package]
name = "demo-serde-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Alberto Schiabel <alberto.schiabel@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]
name = "demo_serde_wasm"

[dependencies]
wasm-bindgen = { version = "0.2.83" }
serde = { version = "1.0.144", features = ["derive"] }
serde-wasm-bindgen = "0.4.3"
