[package]
name = "playground-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Alberto Schiabel <alberto.schiabel@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# build a C-style shared library that can be dynamically loaded by Node.js
crate-type = ["cdylib"]
name = "playground_wasm"

[dependencies]
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
serde = { version = "1.0.144", features = ["derive"] }
