[package]
name = "schema-parser"
version = "0.1.0"
edition = "2021"
authors = ["Alberto Schiabel <alberto.schiabel@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]
name = "schema_parser"

[features]
wasm = ["tsify", "wasm-bindgen"]

[dependencies]
wasm-bindgen = { version = "0.2.83", optional = true }
tsify = { version = "0.4.2", optional = true, features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.85" }
nom = { version = "7.1.1" }

[dev-dependencies]
paste = "1.0.9"
